# SGIS

./: .gitignore  ArenaRenderer.cpp  ArenaRenderer.hpp  AxisAlignedBB.hpp  BackButton.cpp  BackButton.hpp  Button.cpp  Button.hpp  CMakeLists.txt  ExtraMath.cpp  ExtraMath.hpp  Game.cpp  Game.hpp  GameSettings.hpp  Gui.cpp  Gui.hpp  KeyTracker.cpp  KeyTracker.hpp  Logger.cpp  Logger.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  README.md  RenderManager.cpp  RenderManager.hpp  Screen.hpp  ScreenChangeButton.cpp  ScreenChangeButton.hpp  ScreenManager.cpp  ScreenManager.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  (+13 more)
resources/fonts/: README.md
resources/models/: arena.mtl  sky.mtl  square.mtl  text.mtl  wall.mtl
resources/shaders/glsl/: basic.frag  blinnPhong.frag  cubemap.frag  cubemap.vert  generic.vert  text.frag  text.vert
resources/shaders/spirv/: basic.frag.spv  blinnPhong.frag  blinnPhong.frag.spv  cubemap.frag  cubemap.frag.spv  cubemap.vert  cubemap.vert.spv  generic.vert  generic.vert.spv  text.frag  text.frag.spv  text.vert.spv
resources/shaders/spirv/raw/: basic.frag  blinnPhong.frag  generic.vert  text.vert
shaders/: arenaShader.frag  arenaShader.vert  spriteShader.vert
src/: AnimatedCamera.hpp  ArenaGenerator.cpp  ArenaGenerator.hpp  ArenaRenderer.cpp  ArenaRenderer.hpp  AxisAlignedBB.cpp  AxisAlignedBB.hpp  BackButton.cpp  BackButton.hpp  Button.cpp  Button.hpp  Buttons.hpp  CMakeLists.txt  ControlledAI.cpp  ControlledAI.hpp  ExtraMath.cpp  ExtraMath.hpp  FlatMap.hpp  FlatMapRenderData.hpp  Game.cpp  Game.hpp  GameObjectStates.hpp  GameSettings.hpp  Gui.cpp  Gui.hpp  GuiCamera.hpp  KeyTracker.cpp  KeyTracker.hpp  Logger.cpp  Logger.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  Names.hpp  RenderManager.cpp  RenderManager.hpp  (+32 more)
src/shaders/: spriteShader.frag  spriteShader.vert
